<resources>
    <string name="app_name">Route</string>
    <string name="start_name">起点</string>
    <string name="end_name">终点</string>

    <!--hint-->
    <string name="hint_et_route_search">搜索</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="hint_input_end">请输入终点</string>
    <string name="text_my_position">我的位置</string>
    <string name="send_hint">请输入文字</string>
    <string name="send">发送</string>
    <string name="sex">性别：</string>
    <string name="site">地区：</string>
    <string name="age">年龄：</string>
    <string name="introduce">简介：</string>
    <string name="delete_friend">删除好友</string>
    <string name="number">账号</string>
    <string name="password">密码</string>
    <string name="sign">登录</string>
    <string name="login">注册</string>
    <string name="publish_moment">发布动态</string>
    <string name="update_data">修改资料</string>
    <string name="publish_hint">说点什么吧...</string>
    <string name="publish_button">发 布</string>
    <string name="finish_update">修改完成</string>
    <string name="data_name">姓名：</string>
    <string name="update_tips_sex">填男或女(必填)</string>
    <string name="update_tips_name">请输入姓名</string>
    <string name="update_tips_introduction">介绍一下自己吧</string>
    <string name="information_accept">接受</string>
    <string name="information_reject">拒绝</string>
    <string name="add_friend">添加好友</string>
    <string name="site_normal">广州大学城</string>
    <string name="permission">全部可见</string>
</resources>
