<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"
        android:layout_marginTop="100dp">
        <LinearLayout
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/count_edit"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/number"
                android:paddingLeft="20dp"
                android:theme="@style/LoginEditText"/>
            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/password"
                android:paddingLeft="20dp"
                android:theme="@style/LoginEditText"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sign_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:background="@color/login_button"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/login"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:background="@color/login_button"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/sign"/>
    </LinearLayout>
</LinearLayout>