<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="1dp"
        app:contentPadding="10dp"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:hint="@string/sex"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/sex_data"
                    android:textSize="15dp"
                    android:paddingTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="5"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:hint="@string/data_name"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/name_data"
                    android:textSize="15dp"
                    android:paddingTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:hint="@string/introduce"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/introduce_data"
                    android:textSize="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:layout_weight="5"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>